--- a/styles.css
+++ b/styles.css
@@ -20,4 +20,17 @@ body {
 .links {
     width: 50%;
     text-align: right;
+    list-style: none;
+}
+#navbar li {
+    display: inline;
+    margin: 10px;
+    font-size: 1em;
+}
+.title {
+    width: 50%;
+    text-align: left;
+    font-weight: 800;
+    font-size: 2.25em;
+    margin: 10px;
 }
