--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,14 @@ body {
 }
 #navbar li {
     display: inline;
-    margin: 10px;
-    font-size: 1em;
+    margin: 15px;
+    font-size: 1.2em;
+    margin-left: 2em;
 }
 .title {
     width: 50%;
     text-align: left;
     font-weight: 800;
-    font-size: 2.25em;
-    margin: 10px;
+    font-size: 3em;
+    margin: .75em;
 }
