--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,30 @@ body {
 main {
     color: #1B262C;
     display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-auto-rows: 100px;
+    border: 1px solid white;
+    background-color: red;
+    margin-top: 11%;
+    margin-bottom: 10%;
 }
 .card {
     background-color: #BBE1FA;
+}
+#pre {
+    grid-column: 1 / 4;
+    grid-row: 1 / 3;
+    border: 1px solid red;
+}
+#custom {
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+    border: 1px solid red;
+}
+footer {
+    border: 1px solid gold;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 10%;
 }
