--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,13 @@
 }
 body {
     background-color: #1B262C;
+    display: grid;
+    grid-template-rows: 11% auto 10%;
+    height: 100vh; 
+    margin: 0;
+}
+header {
+    grid-row: 1 / 2;
 }
 #navbar {
     width: 100%;
@@ -37,21 +44,24 @@ body {
 }
 main {
     color: #1B262C;
+    grid-row: 2 / 3;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: 100px;
     border: 1px solid white;
-    background-color: red;
-    margin-top: 11%;
-    margin-bottom: 10%;
+    height: 100%;
+    gap: 15px;
+    padding: 20px;
 }
 .card {
     background-color: #BBE1FA;
+    border: 1px solid red;
 }
 #pre {
     grid-column: 1 / 4;
     grid-row: 1 / 3;
     border: 1px solid red;
+    color: ;
 }
 #custom {
     grid-column: 4 / 7;
@@ -60,8 +70,9 @@ main {
 }
 footer {
     border: 1px solid gold;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
-    height: 10%;
+    height: 100%;
+    grid-row: 3 / 4;
 }
