--- a/styles.css
+++ b/styles.css
@@ -48,28 +48,36 @@ main {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: 100px;
-    border: 1px solid white;
     height: 100%;
     gap: 15px;
     padding: 20px;
+    row-gap: 25px;
 }
 .card {
     background-color: #BBE1FA;
-    border: 1px solid red;
+    grid-row: 2 / 5;
+    border-radius: 2%;
 }
 #pre {
     grid-column: 1 / 4;
-    grid-row: 1 / 3;
-    border: 1px solid red;
-    color: ;
+    color: #3282B8;
+    font-size: 2.25em;
+    text-align: center;
+    margin-top: 9%;
 }
 #custom {
     grid-column: 4 / 7;
-    grid-row: 1 / 3;
-    border: 1px solid red;
+    color: #3282B8;
+    font-size: 2.25em;
+    text-align: center;
+    margin-top: 9%;
+}
+.build {
+    font-size: 1.25em;
+    text-align: center;
+    padding: 15px;
 }
 footer {
-    border: 1px solid gold;
     position: relative;
     bottom: 0;
     width: 100%;
